# concept-map-system

./: .gitignore  .pre-commit-config.yaml  ACADEMIC_OUTPUT.md  CLI_QUICK_REFERENCE.md  CONTRIBUTING.md  Makefile  README.md  README_DEV.md  USAGE_EXAMPLES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
concept_map_system/: __init__.py  __main__.py  cli.py  gui.py
concept_map_system/algorithms/: __init__.py  concept_map_core.py  custom_algorithm_template.py  lea_algorithm.py  lea_core.py  mcclure_algorithm.py  novak_algorithm.py  wlea_algorithm.py  wlea_core.py
concept_map_system/core/: __init__.py  algorithm_registry.py  base_algorithm.py  constants.py  exceptions.py  executor.py  logging_config.py  types.py
concept_map_system/tests/: __init__.py  test_algorithm_registry.py  test_base_algorithm.py  test_formatting.py
concept_map_system/utils/: __init__.py  academic_formatter.py  csv_loader.py  formatting.py  proposition_processor.py  result_formatter.py  validation.py
