[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-map-system"
version = "1.1.0"
description = "統合概念マップ採点システム - McClure、Novak、LEAなどを統合"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Concept Map System Team", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
]
lea = [
    "pandas>=1.3.0",
]
all = [
    "pandas>=1.3.0",
]

[project.scripts]
concept-map-system = "concept_map_system.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/concept-map-system"
Documentation = "https://github.com/yourusername/concept-map-system/blob/main/README.md"
Repository = "https://github.com/yourusername/concept-map-system"

# ==============================================================================
# Setuptools Configuration
# ==============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["concept_map_system*"]

# ==============================================================================
# Ruff Configuration
# ==============================================================================

[tool.ruff]
# Python version
target-version = "py38"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
    "PLR0912", # Too many branches (acceptable complexity)
    "N802",    # Function name should be lowercase (for compatibility)
    "N803",    # Argument name should be lowercase (for compatibility)
    "N806",    # Variable in function should be lowercase (for compatibility)
    "RUF001",  # Ambiguous unicode characters (intentional for Japanese text)
    "RUF002",  # Ambiguous unicode characters in docstrings (intentional)
    "RUF003",  # Ambiguous unicode characters in comments (intentional)
    "TID252",  # Relative imports (intentional for package structure)
    "ARG002",  # Unused method arguments (intentional for base class signatures)
    "PLC0415", # Import outside top-level (intentional for lazy imports)
    "RET504",  # Unnecessary variable assignment (intentional for readability)
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can use magic values, assertions, and fixtures
"tests/*" = ["PLR2004", "S101", "ARG001"]
# __init__.py files can have unused imports
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["concept_map_system"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix-style line endings
line-ending = "auto"

# ==============================================================================
# MyPy Configuration
# ==============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "tkinter.*",
    "pandas.*",
    "lea.*",
    "concept_map_scorer.*",
]
ignore_missing_imports = true

# ==============================================================================
# Pytest Configuration
# ==============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=concept_map_system",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

# ==============================================================================
# Coverage Configuration
# ==============================================================================

[tool.coverage.run]
source = ["concept_map_system"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if sys.version_info",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
